# sacd-extract-gui

./: .gitignore  README.md  pyproject.toml  sacd-extract-gui.desktop
sacd_extract_gui/: __main__.py  sacd_gui.ts  sacd_gui.ui
