[tool.poetry]
name = "sacd-extract-gui"
version = "0.1.0"
description = "Yet another sacd_extract GUI"
authors = ["Michael John <michael.john@gmx.at>"]
readme = "README.md"
license = "GPL"
include = ["CHANGELOG.md", "README.md", "sacd_gui.ui", "sacd_gui.png"]

[tool.poetry.scripts]
sacd-extract-gui = 'sacd-extract-gui.__main__:main'

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
pyside6-essentials = "^6.6.0"

[tool.poetry.group.dev.dependencies]
pyside6 = "^6.6.0"
ruff = "^0.3.4"

[tool.ruff.lint]
select = ["E", "F"]
# select = ["ALL"]
# Skip unused imports (`F401`).
ignore = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
homepage = "https://github.com/amstelchen/sacd-extract-gui"
repository = "https://github.com/amstelchen/sacd-extract-gui"
documentation = "https://github.com/amstelchen/sacd-extract-gui"
